# health_agent_infra

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  HYPOTHESES.md  PAPER.md  PROJECT_DECISIONS.md  PROJECT_FRAME.md  PROJECT_OPERATING_MODEL.md  README.md  READY.md  REPO_MAP.md  ROADMAP.md  SECURITY.md  STATUS.md  health-logger-project-brief.md  pyproject.toml  requirements.txt
.github/workflows/: flagship-proof.yml
ARCHIVE/: decisions_log.md  hai_paper_readiness_execution.md  project_reframing_sandbox_control_report.md  reframe_harness_governance_audit_2026-06-09.md
ARCHIVE/benchmark_specs/: BENCHMARK_SPEC.md  HERMETIC_RECIPE.md  OPERATORS_VIEW.md  SCAFFOLD_VIEW.md
ARCHIVE/framing_v2/: CONTEXT_DOSSIER.md  CONVERGED.md  ORCHESTRATOR_STATE.md  PREPRINT_RESCOPE.md  README.md
ARCHIVE/hai_docs/: backup_and_recovery.md  cli_exit_codes.md  competitive_landscape.md  current_system_state.md  explainability.md  how_to_add_a_domain.md  intervals_icu_403_triage.md  mcp_threat_model.md  memory_model.md  per_domain_locator_emission.md  query_taxonomy.md  runtime_contract_overview.md  standards_mapping.md  tour.md
ARCHIVE/novelty_audit_2026-07-04/: canon.md  forbidden.md  grounding_pack.md  neighbors.md  verdict.md
ARCHIVE/paper_planning/: BASELINES_AND_ABLATIONS_PLAN.md  PAPER_FRAME.md  PAPER_OUTLINE_MERGED.md  PRIOR_ART_POSITIONING.md  RELATED_WORK_DRAFT.md  RESEARCH_EVAL_STRATEGY.md  prior_art_matrix.md
ARCHIVE/project_decisions/: DECISIONS.md
artifacts/contracts/: memory_write_contract_v1.json  retrieval_contract_v1.json
benchmark/: README.md
benchmark/governed_agent_bench/: BENCHMARK_CARD.md  OPERATOR_HARNESS_SPEC.md  PILOT_PROTOCOL.md  PRE_LOCK_INVENTORY.md  README.md  REPRODUCIBILITY.md  REPRODUCIBILITY_GOLDEN.json  SCAFFOLD_VIEW.md  SCORING_SPEC.md  SPEC.md  TASK_AUTHORING.md  canary_gate.py  lock_checklist.py  model_roster.md  model_roster.py  oracles.py  pilot_manifest.py  pilot_orchestrator.py  provider_probe.py  reproduce_offline.py  runtime_preflight.py  safety_constrained_subset.json  scorer_config.paper_v1.json
benchmark/verification/: conftest.py
benchmarks/: README.md
benchmarks/governed_agent_bench/: BENCHMARK_SPEC.md  (+4 more)
bot/: __init__.py  config.py  db.py  main.py
dashboard/: dashboard.html  export_data.py  garmin_export.html
docs/: README.md  health_lab_canonical_definition.md  health_lab_canonical_public_demo.md  health_lab_repo_transformation_plan_2026-04-09.md  memory_write_contract_v1.md  retrieval_contract_v1.md
garmin/: analyze_export.py  build_features.py  clean_garmin.py  import_export.py  pull_garmin.py  readiness.py  recommendations.py  thresholds.py
hai/: README.md
health_model/: __init__.py  agent_context_cli.py  agent_contract_cli.py  agent_interface.py  agent_memory_write_cli.py  agent_readable_daily_context.py  agent_retrieval_cli.py  daily_snapshot.py  day_nutrition_brief.py  retrieval_request_metadata.py  voice_note_intake.py
merge_human_inputs/: README.md  __init__.py
ml/: BRIEF.md  portion_estimator.py
paper/: DRAFT.md  DRAFT.tex  DRAFT_dom.md  DRAFT_long.md  FINAL_PAPER.md  JOURNEY.md  README.md  prior_art_notes.md  refs.bib
project/: DECISIONS.md  FRAME.md  HYPOTHESES.md  OPERATING_MODEL.md  REPO_MAP.md  ROADMAP.md
reporting/: README.md
research/: README.md
scripts/: check_skill_cli_drift.py  run_canonical_public_demo.py  smoke_intervals_icu.py
tests/: test_agent_context_cli.py  test_agent_contract_cli.py  test_agent_interface.py  test_agent_memory_write_cli.py  test_agent_recommendation_cli.py  test_agent_retrieval_cli.py  test_bot_wrapper_compat.py  test_day_nutrition_brief.py  test_run_canonical_public_demo.py
web/: app.py
writeback/: __init__.py  agent_memory_write_cli.py
(+2582 files in other folders)
