[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "health_agent_infra"
version = "0.1.0"
description = "Bounded Health Lab contract-and-proof package for agent-mediated health workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "anthropic>=0.45.0",
  "flask>=3.0",
  "flask-login>=0.6",
  "garminconnect>=0.2.38",
  "numpy>=2.0",
  "pandas>=2.0",
  "python-dotenv>=1.0.0",
]
keywords = ["health", "agents", "cli", "proof"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["health_agent_infra*", "health_model*", "writeback*"]
exclude = ["tests*", "data*", "artifacts*"]
