[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "health_agent_infra"
version = "0.1.0"
description = "Tools + skills package for agent-mediated recovery-readiness workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "pandas>=2.0",
  "platformdirs>=4.0",
  "keyring>=24.0",
  "garminconnect>=0.2",
]
keywords = ["health", "agents", "cli", "claude", "skills"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
hai = "health_agent_infra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"health_agent_infra" = [
  "skills/**/*.md",
  "data/**/*.csv",
  "state/migrations/*.sql",
  "core/state/migrations/*.sql",
  "domains/strength/*.csv",
]

[tool.pytest.ini_options]
testpaths = ["safety/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
