[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "health_agent_infra"
version = "0.1.13"
description = "Governed runtime + skills for a multi-domain personal health agent (recovery, running, sleep, stress, strength, nutrition)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Dom Colligan" },
]
dependencies = [
  "pandas>=2.0",
  "platformdirs>=4.0",
  "keyring>=24.0",
  "garminconnect>=0.2",
]
keywords = ["health", "agents", "cli", "claude", "skills"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/dtcolligan/health_agent_infra"
Source = "https://github.com/dtcolligan/health_agent_infra"
Issues = "https://github.com/dtcolligan/health_agent_infra/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "build>=1.2",
  "hypothesis>=6.100",
]

[project.scripts]
hai = "health_agent_infra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"health_agent_infra" = [
  "skills/**/*.md",
  "data/**/*.csv",
  "data/**/*.md",
  "core/state/migrations/*.sql",
  "domains/strength/*.csv",
  "evals/scenarios/**/*.json",
  "evals/rubrics/*.md",
  "demo/fixtures/*.json",
]

[tool.pytest.ini_options]
testpaths = ["verification/tests"]
